--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@
     padding: 16px 28px;
     outline: none;
     border: none;
-    background-color: rgb(174 55 240);
+    background-color: rgb(60, 60, 246);
 }
 
 .options{
